--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">PIP mode with Views</string>
     <string name="play">Play</string>
     <string name="pause">Pause</string>
+    <string name="retry">Retry</string>
 </resources>
