--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="play">Play</string>
     <string name="pause">Pause</string>
     <string name="retry">Retry</string>
+    <string name="seek_forward">Seek forward</string>
+    <string name="seek_back">Seek back</string>
 </resources>
